# MI3DI

./: .gitignore  CMakeLists.txt  README.md  install.bat  mi3di.def  uninstall.bat
.github/workflows/: build.yml
include/: audio.h  log.h  sf2.h  sfz.h  version.h
src/: audio.c  driver.c  log.c  sf2.c  sfz.c
